# vs-removegrain

./: meson.build
docs/: rgvs.rst
msvc_project/: RemoveGrainVS.sln  RemoveGrainVS.vcxproj  RemoveGrainVS.vcxproj.filters
src/: shared.h
